hphp/test/slow/parser/hh-reserved-name-arraykey-2.php.expectf
Fatal error: Cannot use `Arraykey` as a type name as it is reserved in %s on line 4
